--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
